<resources>
    <string name="app_name">DemoApp</string>
    <string name="Jobassist">JobAssist</string>
    <string name="LoginButton">Login</string>
    <string name="signbutton">Sign Up</string>
    <string name="enter_your_e_mail">Enter your E-mail</string>
    <string name="password">Password</string>
    <string name="signin">Sign up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="choose_your_password">Choose your Password</string>
    <string name="sign_in">Sign IN</string>
</resources>
